--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,7 +9,7 @@
 @font-face{
 	font-family: 'Chromatica';
 	src: url('../fonts/Chromatica/Chromatica-Regular.ttf');
-}
+}   
 @font-face{
 	font-family: 'ChromaticaMedium';
 	src: url('../fonts/Chromatica/Chromatica-Medium.ttf');
@@ -67,7 +67,7 @@ button:focus{
     width: 100%;
     height: 100px;
 } */
-.fudiku-home-area .home-slider{
+.fudiku-home-area .home-banner{
     
 }
 .fudiku-home-area .home-item .home-img{
@@ -81,19 +81,19 @@ button:focus{
     animation: fadeInLeft; 
     animation-duration: 3s;
 }
-.fudiku-home-area .home-slider .owl-dots .owl-dot{
+.fudiku-home-area .home-banner .owl-dots .owl-dot{
     background-color: rgba(0,0,0,0);
 }
-.fudiku-home-area .home-slider .owl-dots .owl-dot span{
+.fudiku-home-area .home-banner .owl-dots .owl-dot span{
     border: 3px solid #F03A40;
     width: 12px;
     height: 12px;
     background-color: rgba(0,0,0,0);
 }
-.fudiku-home-area .home-slider .owl-dots .owl-dot span:hover{
+.fudiku-home-area .home-banner .owl-dots .owl-dot span:hover{
     background-color: #F03A40;
 }
-.fudiku-home-area .home-slider .owl-dots .owl-dot.active span{
+.fudiku-home-area .home-banner .owl-dots .owl-dot.active span{
     width: 24px;
     border-radius: 10px;
     background-color: #F03A40;
@@ -297,7 +297,7 @@ button:focus{
 .fudiku-location-area{
     position: relative;
     background-color: #FFF;
-    padding: 2.5rem 0rem;
+    padding: 1.5rem 0rem;
     margin: .5rem 0rem 0rem 0rem;
 }
 .fudiku-location-area .location-form{
