--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -74,6 +74,10 @@ body {
 .main-content{
   min-width: 100vw;
 }
+.main-nav .toggle{
+  border: 1px solid #EFEFEF;
+  border-radius: 10px;
+}
 .main-nav .navbar{
   background: #FFF;
   padding: .5rem 1rem;
@@ -86,18 +90,20 @@ body {
 .main-nav .navbar-search .form-search{
   position: relative;
 }
-.main-nav .navbar-search i{
-  color: #bba8bff5; 
-  position: absolute;
-  right: 15px;
-  top: 10px;
-}
+
 .main-nav .navbar-search input{
-  border-color: #e8e9ed;
+  border-color: #EFEFEF;
   border-radius: 10px;
 }
 .main-nav .navbar-search button{
-  border: 1px solid #e8e9ed;
+  color: #bba8bff5; 
+  position: absolute;
+  right: 0;
+  top: 0;
+  /* border: 1px solid #EFEFEF; */
+}
+.main-nav .navbar-search button:focus{
+  box-shadow: none;
 }
 .main-nav .nav-item{
   margin-left: 15px;
@@ -158,7 +164,6 @@ body {
 .main-body .table-area .table-body{
   padding: 1rem;
 }
-
 .main-dashboard{
   margin-bottom: 1rem;
 }
