--- a/public/css/register.css
+++ b/public/css/register.css
@@ -17,6 +17,7 @@ body{
     border-radius: 10px;
     height: 50px;
     padding-left: 15px;
+    font-size: 14px;
     border: 2px solid #F0F0F0;
     font-family: 'ChromaticaLight';
 }
