--- a/public/css/home.css
+++ b/public/css/home.css
@@ -360,15 +360,7 @@ button:focus{
 .fudiku-location-area .location-form .location-search-list:focus{
     background-color: #EB484E;
 }
-.fudiku-location-area .location-img{
-    width: 50%;
-    /* border: 1px solid #000; */
-}
-.fudiku-location-area .location-img img{
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-}
+
 .fudiku-menu-area{
     position: relative;
     padding: 1.5rem 0rem;
@@ -1450,6 +1442,20 @@ button:focus{
         border: 2px solid #EFEFEF;
         /* box-shadow: 0 2px 4px rgb(15 34 58 / 12%); */
     }
+    .fudiku-location-area .location-img-area{
+        width: 50%;
+        /* border: 1px solid #000; */
+    }
+    .fudiku-location-area .location-img{
+        height: 500px;
+        width: 100%;
+        /* border: 1px solid #000; */
+    }
+    .fudiku-location-area .location-img img{
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+    }
     .mobile-bottom-nav{
         display: none;
     }
@@ -1607,8 +1613,7 @@ button:focus{
         padding: 12px;  
         border-radius: 10px;
         border: 2px solid #EFEFEF;
-    }
-    
+    }   
     .fudiku-delivery-area{
         background-color: #FFF;
         padding: 1.5rem 0rem;
@@ -1654,16 +1659,20 @@ button:focus{
         position: absolute;
         bottom: 50px;
     }
-    .fudiku-location-area .location-img{
+    .fudiku-location-area .location-img-area{
         width: 100%;
-        height: 400px;
+        /* border: 1px solid #000; */
+    }
+    .fudiku-location-area .location-img{
+        height: 500px;
+        width: 100%;
         /* border: 1px solid #000; */
     }
     .fudiku-location-area .location-img img{
         object-fit: contain;
         width: 100%;
         height: 100%;
-    }
+    }    
     .fudiku-order-area .order-packet{
         margin-top: 1.25rem;
     }
@@ -1686,8 +1695,8 @@ button:focus{
     .fudiku-cart-detail-area .cart-menu{
         margin-bottom: 1.25rem;
     }
-    .fudiku-cart-area,
     .fudiku-location-area,
+    .fudiku-cart-area,
     .fudiku-cart-empty-area,
     .fudiku-profile-area,
     .fudiku-profile-blank-area,
