--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1022,16 +1022,53 @@ button:focus{
 }
 .fudiku-profile-edit-area .profile-edit-img{
     /* border: 1px solid #000; */
-    position: relative;
+    /* position: relative;
     width: 150px;
     height: 150px;
     margin: auto;
     border-radius: 50%;
-    overflow: hidden;
-    border: 4px solid #EFEFEF;
+    overflow: hidden; */
+    margin: 0;
     margin-bottom: 1.25rem;
 }
-.fudiku-profile-edit-area .profile-edit-img:before{
+.fudiku-profile-edit-area .profile-edit-img .dropzone{
+    position: relative;
+    border: 2px dashed #EB484E;
+    border-radius: 50%;
+    width: 154px;
+    overflow: hidden;
+    padding: 0;
+    margin: auto;
+    
+}
+.fudiku-profile-edit-area .profile-edit-img .dropzone .dz-message{
+    font-size: 12px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.fudiku-profile-edit-area .profile-edit-img .dropzone .dz-preview{
+    margin: 0;
+    width: 150px;
+    height: 150px;
+}
+.fudiku-profile-edit-area .profile-edit-img .dropzone .dz-preview .dz-image{
+    /* margin: 0; */
+    /* border: 1px solid #000; */
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+}
+.fudiku-profile-edit-area .profile-edit-img .dropzone .dz-preview .dz-error-message{
+    display: none;
+}
+.fudiku-profile-edit-area .profile-edit-img .dropzone .dz-preview .dz-image img{
+    width: 100%;
+    object-fit: contain;
+}
+/* .fudiku-profile-edit-area .profile-edit-img:before{
     position: absolute;
     content: '';
     top: 0;
@@ -1041,11 +1078,11 @@ button:focus{
     width: 100%;
     background-color: rgba(0,0,0,0.3);
     z-index: 0;
-}
-.fudiku-profile-edit-area .profile-edit-img label{
+} */
+/* .fudiku-profile-edit-area .profile-edit-img label{
     position: relative;
     z-index: 1;
-}
+} */
 .fudiku-profile-edit-area .profile-edit-form .form-group{
     margin-bottom: 1.25rem;
 }
