--- a/public/css/login.css
+++ b/public/css/login.css
@@ -115,7 +115,7 @@ body{
         left: 50%;
         transform: translate(-50%,-50%);
         width: 35%;
-        background-color: #FFF;
+        background-color: #FFF;php
         border: 2px solid #EFEFEF;
         padding: 2.5rem;
         border-radius: 10px;
