--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,31 +1,24 @@
 @font-face{
-	font-family: 'ChromaticaLight';
-	src: url('../fonts/Chromatica/Chromatica-Light.ttf');
+	font-family: 'ManropeLight';
+	src: url('../fonts/Manrope/Manrope-Light.ttf');
 }
 @font-face{
-	font-family: 'Chromatica';
-	src: url('../fonts/Chromatica/Chromatica-Regular.ttf');
+	font-family: 'Manrope';
+	src: url('../fonts/Manrope/Manrope-Regular.ttf');
 }
 @font-face{
-	font-family: 'ChromaticaBold';
-	src: url('../fonts/Chromatica/Chromatica-Bold.ttf');
+	font-family: 'ManropeBold';
+	src: url('../fonts/Manrope/Manrope-Bold.ttf');
 }
 
 body{
     background-color: #FFF;
-    font-family: 'Chromatica';
-   
-}
-body{
-    background-color: #F9F8F7;
-    font-family: 'Chromatica';
+    font-family: 'Manrope';
     margin: 0;
     padding: 0;
 }
 @media (min-width: 576px){
     body{
-        background-color: #F9F8F7;
-        font-family: 'Chromatica';
         margin: 0;
         padding: 0;
     }
@@ -40,8 +33,8 @@ body{
     .fudiku-login-user .form-login{
         position: relative;
         overflow: hidden;
-        border-radius: 10px;
-        font-family: 'Chromatica';
+        border-radius: 15px;
+        font-family: 'Manrope';
         width: 40vw;
         background-color: #FFF;
         padding: 250px 50px;
@@ -69,12 +62,12 @@ body{
         
     }
     .fudiku-login-user .form-login input{
-        border-radius: 10px;
+        border-radius: 15px;
         height: 50px;
         padding-left: 15px;
         font-size: 14px;
         border: 2px solid #F0F0F0;
-        font-family: 'ChromaticaLight';
+        font-family: 'ManropeLight';
     }
     .fudiku-login-user .form-login input:focus{
         box-shadow: none;
@@ -83,12 +76,12 @@ body{
     }
     .fudiku-login-user .form-login .btn{
         width: 100%;
-        border-radius: 10px;
+        border-radius: 15px;
         color: #FFF;
         padding: 12px;
         background-image: linear-gradient(180deg,#F03A40,#EB484E);
         border-color: #F03A40;
-        font-family: 'ChromaticaLight';
+        font-family: 'ManropeLight';
     }
     .fudiku-login-user .footer-title{
         /* border: 1px solid #000; */
@@ -115,10 +108,10 @@ body{
         left: 50%;
         transform: translate(-50%,-50%);
         width: 35%;
-        background-color: #FFF;php
+        background-color: #FFF;
         border: 2px solid #EFEFEF;
         padding: 2.5rem;
-        border-radius: 10px;
+        border-radius: 15px;
     }
     .fudiku-login-admin .form-logo{
         text-align: center;
@@ -126,14 +119,14 @@ body{
         margin-bottom: 1.25rem;
     }
     .fudiku-login-admin .form-login label{
-        font-family: 'ChromaticaBold';
+        font-family: 'ManropeBold';
     }
     .fudiku-login-admin .form-login input{
-        border-radius: 10px;
+        border-radius: 15px;
         height: 50px;
         padding-left: 15px;
         font-size: 14px;
-        font-family: 'ChromaticaLight';
+        font-family: 'ManropeLight';
         border: 2px solid #EFEFEF;
     }
     .fudiku-login-admin .form-login input:focus{
@@ -142,11 +135,11 @@ body{
         /* box-shadow: 0 0 0 2px rgba(235, 72, 78); */
     }
     .fudiku-login-admin .form-login .btn{
-        border-radius: 10px;
+        border-radius: 15px;
         background-image: linear-gradient(180deg,#F03A40,#EB484E);
         border-color: #F03A40;
         color: #FFF;
-        font-family: 'ChromaticaLight';
+        font-family: 'ManropeLight';
         width: 100%;
         padding: 12px;
     }
@@ -198,12 +191,12 @@ body{
         object-fit: contain;
     }
     .fudiku-login-user .form-login input{
-        border-radius: 10px;
+        border-radius: 15px;
         height: 50px;
         padding-left: 15px;
         font-size: 14px;
         border: 2px solid #F0F0F0;
-        font-family: 'ChromaticaLight';
+        font-family: 'ManropeLight';
     }
     .fudiku-login-user .form-login input:focus{
         box-shadow: none;
@@ -212,12 +205,12 @@ body{
     }
     .fudiku-login-user .form-login .btn{
         width: 100%;
-        border-radius: 10px;
+        border-radius: 15px;
         color: #FFF;
         padding: 12px;
         background-image: linear-gradient(180deg,#F03A40,#EB484E);
         border-color: #F03A40;
-        font-family: 'ChromaticaLight';
+        font-family: 'ManropeLight';
     }
     .fudiku-login-user .footer-title{
         /* border: 1px solid #000; */
@@ -243,7 +236,7 @@ body{
         background-color: #FFF;
         border: 2px solid #EFEFEF;
         padding: 1.5rem;
-        border-radius: 10px;
+        border-radius: 15px;
     }
     .fudiku-login-admin .form-logo{
         text-align: center;
@@ -251,11 +244,11 @@ body{
         margin-bottom: 1.25rem;
     }
     .fudiku-login-admin .form-login input{
-        border-radius: 10px;
+        border-radius: 15px;
         height: 50px;
         padding-left: 15px;
         font-size: 14px;
-        font-family: 'ChromaticaLight';
+        font-family: 'ManropeLight';
         border: 2px solid #EFEFEF;
     }
     .fudiku-login-admin .form-login input:focus{
@@ -264,11 +257,11 @@ body{
         /* box-shadow: 0 0 0 2px rgba(235, 72, 78); */
     }
     .fudiku-login-admin .form-login .btn{
-        border-radius: 10px;
+        border-radius: 15px;
         background-image: linear-gradient(180deg,#F03A40,#EB484E);
         border-color: #F03A40;
         color: #FFF;
-        font-family: 'ChromaticaLight';
+        font-family: 'ManropeLight';
         width: 100%;
         padding: 12px;
     }
